--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: Alex Lam Royal Pacific Realty
+title: Vancouver Real Estate Videos 
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Alex Lam - your professional Royal Pacific Realty Real Estate Agent.'
 show_custom_links: false
 custom_links:
