Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -70,8 +70,8 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/royalpacificrealty/
   linkedin_url: https://www.linkedin.com/in/alex-lam-6b10214/
-  gplus_url:
-  youtube_url:
+  gplus_url: https://plus.google.com/u/0/109904443537825891565
+  youtube_url: https://www.youtube.com/channel/UCPXb9c_dyeEIRd3KlDWsUvw
   twitter_url: https://twitter.com/Alex_Lam_yvr
   instagram_url:
   pinterest_url:
