--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,7 +22,7 @@ client:
   phone2:
   phone2_type:
   email: alexlam@royalpacific.com
-  url: http://www.alexlam.net/
+  url: http://www.alexlam.net
 
 CTAs:
   first_CTA_text: Home Valuation
