Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -60,7 +60,7 @@ lender:
 welcome_box:
   welcome_headline: Get Educated About Real Estate
   welcome_text_markdown: >
-    My mission at Vancouver Realt Estate Videos is to be your best resource for real estate
+    My mission at Vancouver Real Estate Videos is to be your best resource for real estate
     advice. Whether you are a buyer, seller, or investor, my team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
