--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ welcome_box:
 
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/royalpacificrealty/
+  facebook_url: https://www.facebook.com/Alexlam.realtor/
   linkedin_url: https://www.linkedin.com/in/alex-lam-6b10214/
   gplus_url: https://plus.google.com/u/0/109904443537825891565
   youtube_url: https://www.youtube.com/channel/UCPXb9c_dyeEIRd3KlDWsUvw
