--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ client:
     The Stern Team motto is “clients don’t care how much we know, until they know how much we care”. Their philosophy is that when you take care of others needs, your needs are automatically taken care of. The Stern Team is one of the top real estate groups in North America and the #1 resale team in Utah.
 
     If you're looking to buy, sell or invest in a home to live in Salt Lake, Joshua Stern and his team are here to ensure you have an excellent real estate experience.
-  market: Salt Lake city
+  market: Salt Lake City
   brand: The Stern Team
   brokerage: Keller Williams
   address: "2121 S McClelland, Ste. #201<br>Salt Lake City, UT 84106"
@@ -49,7 +49,7 @@ socials:
   yelp_url: http://www.yelp.com/biz/joshua-stern-salt-lake-city
   podcast_url: https://itunes.apple.com/us/podcast/salt-lake-county-real-estate/id1183406593?mt=2
 podcast:
-  title: Salt Lake city Real Estate Podcast with Joshua Stern
+  title: Salt Lake City Real Estate Podcast with Joshua Stern
   categories: News &amp; Politics
   image: /img/Stern_podcast.png
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Salt Lake city Real Estate Market'
