Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,7 +20,7 @@ client:
   phone2: 703-801-6808
   phone2_type: Cell
   email: jody@thedonaldsonteam.com
-  url: http://jody.donaldson.c21nm.com
+  url: http://www.billblackblog.com
 
 CTAs:
   first_CTA_text: Home Valuation
