--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,7 +19,7 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: realtyonegrouplegacy@gmail.com
+  email: jm@roglegacy.com
   url: http://www.roglegacy.com/
 
 CTAs:
@@ -62,7 +62,7 @@ welcome_box:
 
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/JohnMeulsteeRealEstate/
+  facebook_url: https://www.facebook.com/ROGLegacy/
   linkedin_url: https://www.linkedin.com/in/john-meulstee-0705435/
   gplus_url:
   youtube_url:
