Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,7 +20,7 @@ client:
   phone2:
   phone2_type:
   email: jm@roglegacy.com
-  url: http://www.roglegacy.com/
+  url: http://www.roglegacy.com
 
 CTAs:
   first_CTA_text: Request a Consultation
