--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ client:
   market: San Diego
   brand: Select Premier Properties
   brokerage:
-  address: 1419 University Ave, Suite D San Diego, CA 92103
+  address: 1419 University Ave, Suite D<br>San Diego, CA 92103
   phone: 619-392-2455
   phone_type:
   phone2:
@@ -83,7 +83,7 @@ socials:
 podcast:
   title: San Diego Real Estate Podcast with Victoria Sandoval
   categories: Education
-  image: /img/podcast.jpg
+  image: http://i.imgur.com/Jcl6r2b.png
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the San Diego Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Select Premier Properties - your professional San Diego Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in San Diego, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
