Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,8 +29,8 @@ client:
     various other programs being interviewed about the local real estate market.
   market: Orlando
   brand: Orlando Property Group
-  brokerage: Keller Williams Classic V
-  address: 25 W. Crystal Lake St. Ste. 157 Orlando FL 32806
+  brokerage: Charles Rutenberg Realty
+  address:
   phone: 407-477-5639
   phone_type:
   phone2:
