--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,9 +52,9 @@ podcast:
   title: Salt Lake City Real Estate Podcast with Joshua Stern
   categories: News &amp; Politics
   image: /img/Stern_podcast.png
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Salt Lake city Real Estate Market'
-  description: 	If you are looking to buy or sell a Salt Lake city home, get all the information and the latest updates, tips, and tricks from The Stern Team - your professional Salt Lake City Real Estate Agents.
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Salt Lake city, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Salt Lake City Real Estate Market'
+  description: 	If you are looking to buy or sell a Salt Lake City home, get all the information and the latest updates, tips, and tricks from The Stern Team - your professional Salt Lake City Real Estate Agents.
+  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Salt Lake City, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: Joshua Stern
 images:
   client_headshot_path: '/img/headshot.jpg'
