Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -31,6 +31,7 @@ client:
   brand: Orlando Property Group
   brokerage: Charles Rutenberg Realty
   phone: 407-477-5639
+  address:
   phone_type:
   phone2:
   phone2_type:
