Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -51,7 +51,7 @@ socials:
   pinterest_url:
   zillow_url: 'http://www.zillow.com/profile/bryan-david/'
   trulia_url: 'https://www.trulia.com/profile/bryan-david-agent-ocean-springs-ms-zgvyhmng/overview'
-  yelp_url:
+  yelp_url: 'https://www.yelp.com/biz/bryan-david-group-ocean-springs'
   podcast_url: 'https://itunes.apple.com/us/podcast/mississippi-gulf-coast-real-estate-podcast-bryan-david/id1211755092?mt=2'
 podcast:
   title: Mississippi Gulf Coast Real Estate Podcast with Bryan David
