--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -81,7 +81,7 @@ socials:
 podcast:
   title: Homestead & Co. Podcast with Zach Sikes
   categories: Education
-  image: http://homesteadvlog.com/img/podcast.jpg
+  image: https://s3.amazonaws.com/vyralmarketing/Zach+Sikes/Sikes_podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Zach Sikes - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Edmond, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
