--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,7 +76,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/karikohler/
   trulia_url: https://www.trulia.com/profile/kari-kohler-agent-saint-charles-il-zg3dzbrq/overview
   yelp_url: https://www.yelp.com/biz/kari-kohler-re-max-excels-geneva
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/st-cloud-real-estate-podcast-with-kari-kohler/id1254489143?mt=2
 
 podcast:
   title: St. Cloud Real Estate Podcast with Kari Kohler
