--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -74,7 +74,7 @@ podcast:
   author: '-- CLIENT NAME --'
 images:
   client_headshot_path: /img/headshot.jpg
-  hero_logo_path: /img/logo.png
+  hero_logo_path: /uploads/loodmy-jacques-combined-logo-with-century-21-on-the-right-side-7-6-17.png
   logo_width_number: 60
   hero_text: Real Estate Video Blog
   hero_background_hex: '#000000'
