Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -106,7 +106,7 @@ header_shadow:
   h_shadow: 3px
   w_shadow: 3px
   shadow_spread: 5px
-  shadow_color: rgba(23, 20, 111, .8)
+  shadow_color: white
 
 buttons:
   button_radius_number: 0
