--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,8 +68,8 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/thedeeteamrealtors/
   linkedin_url: https://www.instagram.com/luxuryhomesorlando/
-  gplus_url:
-  youtube_url:
+  gplus_url: https://plus.google.com/u/0/b/105648539260170742409
+  youtube_url: https://www.youtube.com/channel/UC4pe3z-l-XkGG1g6xXU-PXg
   twitter_url: https://twitter.com/TheDeeTeam
   instagram_url:
   pinterest_url:
