--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -67,11 +67,11 @@ welcome_box:
 socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/thedeeteamrealtors/
-  linkedin_url: https://www.instagram.com/luxuryhomesorlando/
+  linkedin_url: https://www.linkedin.com/company/15082585?trk=prof-exp-company-name
   gplus_url: https://plus.google.com/u/0/b/105648539260170742409
   youtube_url: https://www.youtube.com/channel/UC4pe3z-l-XkGG1g6xXU-PXg
   twitter_url: https://twitter.com/TheDeeTeam
-  instagram_url:
+  instagram_url: https://www.instagram.com/luxuryhomesorlando/
   pinterest_url:
   zillow_url: https://www.zillow.com/profile/The-Dee-Team/
   trulia_url: https://www.trulia.com/profile/deepak-gupta-agent-orlando-fl-zg5yvxj4/overview
@@ -79,7 +79,7 @@ socials:
   podcast_url:
 
 podcast:
-  title:
+  title: Orlando Real Estate Video Blog with Deepak Gupta
   categories: Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
