Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -67,7 +67,7 @@ socials:
   zillow_url:
   trulia_url:
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/orange-county-real-estate-podcast-valerie-van-zilver/id1254489145?mt=2
 
 podcast:
   title: The Retirement Bullseye Podcast With Mario Giganti
