Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -93,7 +93,7 @@ socials:
   zillow_url: 'https://www.zillow.com/profile/BECKY0/'
   trulia_url: 'https://www.trulia.com/profile/becky-ivins-agent-oklahoma-city-ok-zgvvht4f/overview'
   yelp_url: 'https://www.yelp.com/biz/becky-ivins-movers-real-estate-oklahoma-city'
-  podcast_url:
+  podcast_url: 'https://itunes.apple.com/us/podcast/becky-ivins-movers-real-estate-podcast/id1248051725?mt=2'
 podcast:
   title: Becky Ivins Movers Real Estate Podcast
   categories:
