Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -78,7 +78,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/vickysellssd/
   trulia_url: https://www.trulia.com/profile/victoria-sandoval-agent-san-diego-ca-zgzrljk6/overview
   yelp_url: https://www.yelp.com/biz/victoria-sandoval-select-premier-properties-san-diego?osq=Sandoval+Premier+Properties
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/san-diego-real-estate-podcast-with-victoria-sandoval/id1254500123?mt=2
 
 podcast:
   title: San Diego Real Estate Podcast with Victoria Sandoval
