Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,7 +76,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/Zsikes/
   trulia_url: https://www.trulia.com/profile/zach-sikes-agent-edmond-ok-zgdp7r9z/overview
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/homestead-co-podcast-with-zach-sikes/id1255274951?mt=2
 
 podcast:
   title: Homestead & Co. Podcast with Zach Sikes
