--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,54 +1,55 @@
 audit_header: false
-title: -- CLIENT BRAND --
+title: '-- CLIENT BRAND --'
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Mindy and Jay Robbins
   license_number:
-  about_markdown: |
-    Robbins Real Estate Group is a boutique firm focused on home sales in Dallas, Park Cities, Richardson, and the North Dallas suburbs. The company is proudly owned and operated by the husband and wife team of Jay Robbins and Mindy Robbins. If you are looking for a real estate broker in Dallas, Park Cities, Richardson, or the North Dallas suburbs, call the company that will exceed your expectations. Call Mindy and Jay Robbins with Robbins Real Estate Group.
+  about_markdown: >
+    Robbins Real Estate Group is a boutique firm focused on home sales in Dallas,
+    Park Cities, Richardson, and the North Dallas suburbs. The company is proudly
+    owned and operated by the husband and wife team of Jay Robbins and Mindy
+    Robbins. If you are looking for a real estate broker in Dallas, Park Cities,
+    Richardson, or the North Dallas suburbs, call the company that will exceed
+    your expectations. Call Mindy and Jay Robbins with Robbins Real Estate
+    Group.
   market: Dallas-Fort Worth Texas Real Estate
   brand: Robbins Real Estate
   brokerage:
-  address: 5495 Beltline Road Suite 135 <br> Dallas, TX 75254
+  address: '5495 Beltline Road Suite 135 <br> Dallas, TX 75254'
   phone: 214-444-9014
   phone_type:
   phone2:
   phone2_type:
   email: Mindy@TeamRobbins.com
   email2: Jay@TeamRobbins.com
-  url: http://www.teamrobbins.com
-
+  url: 'http://www.teamrobbins.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: https://www.teamrobbins.com/sell/
+  first_CTA_URL: 'https://www.teamrobbins.com/sell/'
   second_CTA_text: Home Search
-  second_CTA_URL: https://www.teamrobbins.com/results-gallery/
+  second_CTA_URL: 'https://goo.gl/1s2xvh'
   VR_form:
-
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/005.jpg
     CTA_title: Looking to Buy a Home?
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Home Search Tool
-    CTA_url: https://www.teamrobbins.com/results-gallery/
-
+    CTA_url: 'https://www.teamrobbins.com/results-gallery/'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -57,30 +58,28 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: http://facebook.com/RobbinsRealEstateGroup
-  linkedin_url: https://www.linkedin.com/in/mindyrobbins
-  gplus_url: https://plus.google.com/+RobbinsRealEstateDallas
-  youtube_url: https://www.youtube.com/user/RobbinsRealEstateGrp
-  twitter_url: http://twitter.com/TeamRobbins
+  facebook_url: 'http://facebook.com/RobbinsRealEstateGroup'
+  linkedin_url: 'https://www.linkedin.com/in/mindyrobbins'
+  gplus_url: 'https://plus.google.com/+RobbinsRealEstateDallas'
+  youtube_url: 'https://www.youtube.com/user/RobbinsRealEstateGrp'
+  twitter_url: 'http://twitter.com/TeamRobbins'
   instagram_url:
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/jayrobbins/
+  zillow_url: 'https://www.zillow.com/profile/jayrobbins/'
   trulia_url:
-  yelp_url: https://www.yelp.com/biz/robbins-real-estate-dallas
+  yelp_url: 'https://www.yelp.com/biz/robbins-real-estate-dallas'
   podcast_url:
-
 podcast:
   title:
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
@@ -90,18 +89,16 @@ images:
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#03355E'
-  theme_color: '#03355E'
+  brand_color: '#03355e'
+  theme_color: '#03355e'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "#000"
-
+  shadow_color: '#000000'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
