Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,7 +22,7 @@ client:
   phone2:
   phone2_type:
   email: insidesales@ultimaterealtysa.com
-  url: https://www.bestsanantoniohomesearch.com/
+  url: https://www.bestsanantoniohomesearch.com
 
 CTAs:
   first_CTA_text: Home Valuation
