--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,52 +1,55 @@
 audit_header: false
-title: -- CLIENT BRAND --
+title: '-- CLIENT BRAND --'
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
-  name: Brian & Tiffany Canady
+  name: 'Brian & Tiffany Canady'
   license_number:
-  about_markdown: |
-    It's our mission, as a team to provide individuals and families with a full service Real Estate practice.
-    To ensure our buyers and sellers make the most educated decision for their needs we will provide resources for them throughout the real estate transaction and most importantly, after the sale too.
-    We will strive to serve each person with the utmost respect and integrity to ensure they reach success with our company and trust us to do business with their friends and family.
+  about_markdown: >
+    It's our mission, as a team to provide individuals and families with a full
+    service Real Estate practice.
+
+    To ensure our buyers and sellers make the most educated decision for their
+    needs we will provide resources for them throughout the real estate
+    transaction and most importantly, after the sale too.
+
+    We will strive to serve each person with the utmost respect and integrity to
+    ensure they reach success with our company and trust us to do business with
+    their friends and family.
+
     We are your one stop shop for ALL THINGS REAL ESTATE.
   market: Colorado Springs Real Estate
   brand: All Things Real Estate
   brokerage: Premier Real Estate Group
-  address: 605 South Tejon Street <br> Colorado Springs, Colorado 80903
+  address: '605 South Tejon Street <br> Colorado Springs, Colorado 80903'
   phone: 719-999-5789
   phone_type: Direct
   phone2: 720-260-0789
   phone2_type: Cell
   email: brian@briancanady.com
   email2: tiffany@buyspring.com
-  url: http://www.buysprings.com
-
+  url: 'http://www.buysprings.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.buysprings.com/cma/property-valuation/
+  first_CTA_URL: 'http://www.buysprings.com/cma/property-valuation/'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.buysprings.com/
-  VR_form: http://oi.vresp.com?fid=d3ec76a8c9
-
+  second_CTA_URL: 'http://www.buysprings.com/'
+  VR_form: 'http://oi.vresp.com?fid=d3ec76a8c9'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/007.jpg
     CTA_title: Looking to Buy a Home?
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Home Search Tool
-    CTA_url: http://www.buysprings.com/
-
+    CTA_url: 'http://www.buysprings.com/'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/004.jpg
-    CTA_title2: What's Your Home Worth?
-    CTA_text2: Thinking of selling or interested in learning about a neighbor's house? We can help you see what it's worth.
+    CTA_title2: "What's Your Home Worth?"
+    CTA_text2: "Thinking of selling or interested in learning about a neighbor's house? We can help you see what it's worth."
     CTA_link_text2: Free Home Value Report
-    CTA_url2: http://www.buysprings.com/cma/property-valuation/
-
+    CTA_url2: 'http://www.buysprings.com/cma/property-valuation/'
 lender:
   show_section: true
   header_text: Preferred Lender
@@ -57,8 +60,7 @@ lender:
   brand: 719 Lending
   phone: 719-231-4893
   email: Tchase@719Lending.com
-  url: 108 E St. Vrain <br> Colorado Springs, CO 80903
-
+  url: '108 E St. Vrain <br> Colorado Springs, CO 80903'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -67,30 +69,28 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/buysprings/
-  linkedin_url: https://www.linkedin.com/in/briancanady/
-  gplus_url:
-  youtube_url: https://www.youtube.com/channel/UCx7B2PvK5zpdA0FYkMGtRUg
-  twitter_url: https://twitter.com/buywithtiffany
+  facebook_url: 'https://www.facebook.com/buysprings/'
+  linkedin_url: 'https://www.linkedin.com/in/briancanady/'
+  gplus_url: 'https://plus.google.com/u/0/116769834531792232543'
+  youtube_url: 'https://www.youtube.com/channel/UCx7B2PvK5zpdA0FYkMGtRUg'
+  twitter_url: 'https://twitter.com/buywithtiffany'
   instagram_url:
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/Tiffany-and-Brian-Canady/
-  trulia_url: https://www.trulia.com/profile/tiffany-brian-canady-agent-colorado-springs-co-zgkr745r/overview
+  zillow_url: 'https://www.zillow.com/profile/Tiffany-and-Brian-Canady/'
+  trulia_url: 'https://www.trulia.com/profile/tiffany-brian-canady-agent-colorado-springs-co-zgkr745r/overview'
   yelp_url:
-  podcast_url: https://itunes.apple.com/us/podcast/colorado-springs-real-estate-podcast-brian-tiffany/id1237820266?mt=2
-
+  podcast_url: 'https://itunes.apple.com/us/podcast/colorado-springs-real-estate-podcast-brian-tiffany/id1237820266?mt=2'
 podcast:
-  title: Colorado Springs Real Estate Podcast With Brian & Tiffany Canady
-  categories: Education
-  image: http://i.imgur.com/XI60sJv.png
+  title: 'Colorado Springs Real Estate Podcast With Brian & Tiffany Canady'
+  categories:
+    - Education
+  image: 'http://i.imgur.com/XI60sJv.png'
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
@@ -101,17 +101,15 @@ images:
   post_cover: /img/cover.jpg
 site_colors:
   brand_color: '#b00200'
-  theme_color: '#000'
-  theme_text_color: '#fff'
+  theme_color: '#000000'
+  theme_text_color: '#ffffff'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "#000"
-
+  shadow_color: '#000000'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
