--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -73,7 +73,7 @@ socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/buysprings/'
   linkedin_url: 'https://www.linkedin.com/in/briancanady/'
-  gplus_url: 'https://plus.google.com/u/0/116769834531792232543'
+  gplus_url:
   youtube_url: 'https://www.youtube.com/channel/UCx7B2PvK5zpdA0FYkMGtRUg'
   twitter_url: 'https://twitter.com/buywithtiffany'
   instagram_url:
