url added to config

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,7 +20,7 @@ client:
   phone2:
   phone2_type:
   email: shawnabrooks@kw.com
-  url: http://www.shawnashometeam.com
+  url:
 
 CTAs:
   first_CTA_text: Home Valuation
