Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ socials:
   zillow_url: http://www.zillow.com/profile/The-Dave-Hooke-Team/
   trulia_url: http://www.trulia.com/profile/the-dave-hooke-team-agent-carlisle-pa-zgpq697x/overview
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/central-pa-real-estate-career-podcast-with-dave-hooke/id1256717687?mt=2
 
 podcast:
   title: Central PA Real Estate Career Podcast with Dave Hooke
