--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -71,7 +71,7 @@ socials:
   zillow_url: http://www.zillow.com/profile/The-Dave-Hooke-Team/
   trulia_url: http://www.trulia.com/profile/the-dave-hooke-team-agent-carlisle-pa-zgpq697x/overview
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/central-pa-real-estate-podcast-with-dave-hooke/id1256715240?mt=2
 
 podcast:
   title: Central PA Real Estate Podcast with Dave Hooke
