Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,7 +18,7 @@ client:
     If you're looking to buy, sell or invest in a home to live in Salt Lake, Joshua Stern and his team are here to ensure you have an excellent real estate experience.
   market: Salt Lake City
   brand: The Stern Team
-  brokerage: Keller Williams
+  brokerage: KW Salt Lake City Keller Williams Real Estate
   address: "2121 S McClelland, Ste. #201<br>Salt Lake City, UT 84106"
   phone: 801-859-7509
   phone_type:
