--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,7 +28,7 @@ CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: http://alexlam.net/home-evaluation.html
   second_CTA_text: Home Search
-  second_CTA_URL: http://alexlam.net/vow.html
+  second_CTA_URL: http://alexlam.net/vow.html#!/wps/-/noframe~true/recip/30044/idx.search?
   VR_form: http://oi.vresp.com?fid=ca342c5398
 
 sidebar_CTA:
