--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,7 +29,7 @@ CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: 'https://www.backatyou.com/home-value/C18CFDE3-2B6B-4F79-88A5-14CCB0D3EA72?r=baygcb_fb_5720'
   second_CTA_text: Home Search
-  second_CTA_URL: 'http://www.themylesgroup.net/results-map/?sort=importdate&status=A&swlat=30.234771697852793&swlng=-98.26135228417968&nelat=30.626710567328356&nelng=-97.2629697158203&midlat=30.430938&midlng=-97.76216099999999&zoom=11'
+  second_CTA_URL: 'https://www.themylesgroup.net/results-map/?city=100227%2C100236%2C100230&custom=98897%2C98896%2C98898&midlat=31.025577376963536&midlng=-97.7484455919922&nelat=31.238931209374297&nelng=-97.34023483759768&sort=importdate&status=A&swlat=30.811744623058598&swlng=-98.15665634638674&zoom=11'
   VR_form: 'http://oi.vresp.com?fid=bfc28e12a5'
 sidebar_CTA:
   CTA_image_path: /img/cta-images/004.jpg
