Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ client:
   name: 'Jesse Myles, REALTOR®'
   license_number: 555916
   about_markdown: "The Myles Group is comprised of a team of local real estate professionals committed to selling some of the most desired homes in Greater Fort Hood. Selling these \"right addresses\" is the mission of The Myles Group. Let us know what you're looking for. Please take advantage of the helpful tools on this website, including our exclusive Greater Fort Hood Real Estate search, but also feel free to contact us personally. Each Keller Willams Office is Independently Owned and Operated."
-  market: Greater Harker Heights
+  market: Greater Fort Hood
   brand: The Myles Group
   brokerage: Keller Williams Realty
   address: '12515 Research Blvd., Bldg. 8, #100<br>Austin Tx, 78759'
