--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: '-- CLIENT BRAND --'
+title: 'Hooke, Hooke & Eckman Realtors, LLC'
 description: 'Improve your real estate career by getting all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: false
 custom_links:
@@ -71,7 +71,7 @@ podcast:
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
-  logo_width_number: 90
+  logo_width_number: 80
   hero_text: 'Real Estate Video Blog'
   hero_background_hex: '#262624'
   hero_image_path: /img/background.jpg
