Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -77,7 +77,7 @@ images:
   hero_image_path: /img/background.jpg
 site_colors:
   brand_color: '#003b27'
-  theme_color: '#003b27'
+  theme_color: '#262624'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
