Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,8 +76,8 @@ images:
   hero_background_hex: '#262624'
   hero_image_path: /img/background.jpg
 site_colors:
-  brand_color: '#003b27'
-  theme_color: '#262624'
+  brand_color: green
+  theme_color: '#ff4900'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
