--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,7 +76,7 @@ images:
   hero_background_hex: '#262624'
   hero_image_path: /img/background.jpg
 site_colors:
-  brand_color: green
+  brand_color: '#003b27'
   theme_color: '#ff4900'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
