--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -72,7 +72,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 80
-  hero_text: 'Real Estate Video Blog'
+#   hero_text: 'Real Estate Video Blog'
   hero_background_hex: '#262624'
   hero_image_path: /img/background.jpg
 site_colors:
