--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -91,8 +91,8 @@ podcast:
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
-  logo_width_number: 80
-  hero_text: Central Florida and Orlando Real Estate Video Blog
+  logo_width_number: 60
+  hero_text: Central Florida & Orlando Real Estate Video Blog
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
