--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,9 +4,9 @@ description: 'If you are looking to buy or sell a home, get all the information 
 show_custom_links: true
 custom_links:
   - title: '#PassionMatters'
-    url: http://www.searchcentralflhomesforsale.com/about
+    url: 'https://twitter.com/search?q=%23passionmatters'
   - title: '#StrategyMatters'
-    url: http://www.searchcentralflhomesforsale.com/about
+    url: 'https://twitter.com/search?q=%23strategymatters'
 client:
   name: Deepak Gupta
   license_number:
