Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,7 +76,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/Patty-Gillespie/
   trulia_url: https://www.trulia.com/profile/patty-gillespie-phd-agent-raleigh-nc-zgf1fjcj/overview
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/north-carolina-real-estate-podcast-with-patty-gillepsie/id1256700927?mt=2
 
 podcast:
   title: North Carolina Real Estate Podcast with Patty Gillepsie
