--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -74,7 +74,7 @@ podcast:
   author: Joe Sabato
 images:
   client_headshot_path: /img/headshot.png
-  hero_logo_path: /uploads/bluesabatologo.png
+  hero_logo_path: /img/logo.png
   logo_width_number: 60
   hero_text:
   hero_background_hex: '#1565c0'
