Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: Sabato Property Group of Keller Williams Realty International
+title: Sabato Property Group of Keller Williams Realty Treasure Coast
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Sabato Property Group of Keller Williams Realty International - your professional Real Estate Agents.'
 show_custom_links: false
 custom_links:
@@ -11,7 +11,7 @@ client:
   about_markdown: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Sabato Property Group of Keller Williams Realty International - your professional Real Estate Agent.'
   market:
   brand: Sabato Property Group
-  brokerage: Keller Williams Realty International
+  brokerage: Keller Williams Realty Treasure Coast
   address: '601 SE Central Parkway<br>Stuart, FL 34994'
   phone: 772-237-3435
   phone_type:
@@ -45,7 +45,7 @@ lender:
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at Sabato Property Group of Keller Williams Realty International
+    Our mission at Sabato Property Group of Keller Williams Realty Treasure Coast
     is to be your best resource for real estate advice. Whether you are a buyer,
     seller, or investor, our team of professionals can answer any questions you
     might have about real estate. Subscribe to this blog to get the latest news
