Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,8 +3,8 @@ title: Portland Real Estate Video Blog with Trudy Coler
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: true
 custom_links:
-  - title: RMLS Market Action
-    url: 'http://www.rmlsweb.com/v2/public2/loadfile.asp?id=9479'
+  - title:
+    url:
 client:
   name: Trudy Coler
   license_number:
