--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -20,7 +20,7 @@ client:
   phone2:
   phone2_type:
   email: Nancy@KWParkCity.com
-  url: http://kwparkcity.com
+  url: http://KWParkCity.com
 
 CTAs:
   first_CTA_text: Free Strategy Session
@@ -56,9 +56,9 @@ lender:
   url: http://eyegoop.com
 
 welcome_box:
-  welcome_headline: When you choose to join Keller Williams, you join forces with the most dynamic real estate company in the world!
+  welcome_headline: Subscribe to Our Newsletter
   welcome_text_markdown: >
-    I educate Real Estate Agents on how to build a better buiness and sell more homes, while sharing the benefits of what it's like to have a career with Keller Williams.
+    When you choose to join Keller Williams, you join forces with the most dynamic real estate company in the world! I educate Real Estate Agents on how to build a better buiness and sell more homes, while sharing the benefits of what it's like to have a career with Keller Williams.
 
 socials:
   review_sm_icons: false
@@ -87,7 +87,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 60
-  hero_text: -- MARKET -- Real Estate Career and Training Video Blog
+  hero_text: Real Estate Career and Training Video Blog
   hero_background_hex: '#b40101'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
