--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -79,13 +79,13 @@ socials:
   podcast_url:
 
 podcast:
-  title:
+  title: Palm Beach Real Estate Podcast with The Treu Group
   categories: Education
-  image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: '-- CLIENT NAME --'
+  image: http://i.imgur.com/9KV2FyM.jpg
+  subtitle: 'Real Estate Tips and Tricks for the Palm Beach and Martin County market'
+  description: "I'll update you with how to make a smart decision in real estate, improve the value of your home, and keep you up to date on what's happening in our local Palm Beach & Martin County real estate market."
+  keywords: 'Real,Estate,Palm,Beach,Market,Sale,Lisa,Treu,Group,Tips,Tricks,South,Florida,agents,educational,informative,housing,house,short,talk,show,radio,martin,county'
+  author: 'The Treu Group'
 
 images:
   client_headshot_path: /img/headshot.jpg
