--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -34,7 +34,7 @@ sidebar_CTA:
     CTA_title: Looking to Buy a Home?
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Home Search Tool
-    CTA_url: http://www.trianglehousehunting.com/search.aspx
+    CTA_url: http://www.viewdurhamraleighhomes.com/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
