Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,7 +26,7 @@ CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: http://www.trianglehousehunting.com/s/Find-Out-How-Much-Your-North-Carolina-Home-Is-Worth?utm_campaign=patty
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.trianglehousehunting.com/search.aspx
+  second_CTA_URL: http://www.viewdurhamraleighhomes.com/
   VR_form: http://oi.vresp.com?fid=196692a4fb
 
 sidebar_CTA:
