--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,17 +10,7 @@ custom_links:
 client:
   name: Dave Hooke
   license_number:
-  about_markdown: >
-    Born and raised in Carlisle, Dave is honored to serve the Real Estate needs
-    of the greater Carlisle Community. As a partner of Hooke, Hooke & Eckman
-    Realtors, he has a personal interest in the continuation of the reputable
-    family name. Also, he is the lead agent of The Dave Hooke Team and has
-    consistently been in the top 1% as a top producing real estate agent in the
-    Carlisle Area Community for 6 consecutive years. Dave is a member of The
-    Meeting House Church in Carlisle, enjoys outdoor activities, reading, playing
-    soccer, and things related to ‘Community’. A fun fact about Dave is that when
-    he talks on the phone, he can’t sit down and he is always pacing around the
-    office! : ) Dave enjoys living here in Carlisle with his wife and family.
+  about_markdown: 'Born and raised in Carlisle, Dave is honored to serve the Real Estate needs of the greater Carlisle Community. As a partner of Hooke, Hooke & Eckman Realtors, he has a personal interest in the continuation of the reputable family name. Also, he is the lead agent of The Dave Hooke Team and has consistently been in the top 1% as a top producing real estate agent in the Carlisle Area Community for 6 consecutive years. Dave is a member of The Meeting House Church in Carlisle, enjoys outdoor activities, reading, playing soccer, and things related to ‘Community’. A fun fact about Dave is that when he talks on the phone, he can’t sit down and he is always pacing around the office! : ) Dave enjoys living here in Carlisle with his wife and family.'
   market:
   brand: The Dave Hooke Team LLC
   brokerage: 'Hooke Hooke & Eckman Realtors'
@@ -30,7 +20,7 @@ client:
   phone2: 717-249-1844
   phone2_type: Brokerage
   email: Dave@hhande.com
-  url: 'http://ViewCentralPAHomes.com'
+  url: 'http://Viewcentralpahouses.com'
 CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: 'http://www.viewcentralpahouses.com/what-is-my-home-worth'
