--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -32,7 +32,7 @@ sidebar_CTA:
     CTA_title: Looking to Buy a Home?
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Home Search Tool
-    CTA_url: 'http://www.viewcentralpahomes.com/'
+    CTA_url: 'http://www.viewcentralpahouses.com/'
 lender:
   show_section: false
   header_text: Preferred Lender
