Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ custom_links:
 client:
   name: Dave Hooke
   license_number:
-  about_markdown: >
+  about_markdown: >-
     Born and raised in Carlisle, Dave is honored to serve the Real Estate needs
     of the greater Carlisle Community. As a partner of Hooke, Hooke & Eckman
     Realtors, he has a personal interest in the continuation of the reputable
@@ -32,7 +32,7 @@ client:
   phone2: 717-249-1844
   phone2_type: Brokerage
   email: Dave@hhande.com
-  url: 'http://ViewCentralPAHomes.com'
+  url: 'http://Viewcentralpahouses.com'
 CTAs:
   first_CTA_text: Request a Free Strategy Session
   first_CTA_URL: 'http://www.viewcentralpahouses.com/join-the-team'
@@ -61,6 +61,8 @@ welcome_box:
   welcome_text_markdown: >
     Whether you are just starting out, or you are licensed Broker, our team of
     professionals can answer any questions you might have about real estate.<BR>
+
+
 
 
 
