--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,10 @@ client:
   name: John Meulstee
   license_number: RS303707
   about_markdown: |
-       Hi, I’m John Meulstee, team leader of The John Meulstee Home Selling Team at Realty One Group Legacy. As expert real estate advisers serving the Bucks County and Montgomery County real estate market, our team has over 100 years of combined experience. We specialize in selling homes at the top of the market with the least amount of hassles! Please take some time to look around this blog which highlights my services offered. I look forward to hearing from you soon and having the opportunity to earn your business!
+       Growing up in Central Bucks and living here all of my life, I enjoy being a long time resident of Doylestown and am committed to our community. After graduating from CB West and becoming a Business Management Systems major at Shippensburg University my life changed on September 11th, 2001.
+       After the atrocities of September 11th, 2011, I left college and enlisted for five-years with the United States Marine Corp where I became a Helicopter Crew Chief. During my time in service, I was meritoriously promoted twice and served two seven month tours in Iraq. Honor, Courage and Commitment, the US Marine Corps values, were imprinted in me deeply during this time. My desire to serve and to lead are evident in the commitment I bring to my team every day.
+       After finishing my duties in the Marine Corps in 2007, I decided to start my business life as a Realtor after reading the book Rich Dad, Poor Dad. This book inspired me to strive for a bigger life than I had growing up and helped pave the way for the successes I would quickly have in business.
+       In ten short years I have built a team that annually sells more homes in Bucks and Montgomery Counties than any other agent. In 2016 The John Meulstee Home Selling Team sold 119 homes for a sales volume of over $37M and is on pace for over 150 home sales and over $50M in sales volume this year.
   market:
   brand: John Meulstee Home Selling Team
   brokerage: Realty One Group Legacy
